@@ -1,3 +1,11 @@
+2023-01-26  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-lex.l (pkl_lex_get_base): Handle 0[Bb] literals
+	properly.
+	* testsuite/poke.pkl/integers-11.pk: New test.
+	* testsuite/poke.pkl/integers-12.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
 2023-01-25  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* configure.ac: Bump version number to 3.0.
